--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,8 @@
   src: url('../fonts/resphektregular.otf') format('opentype'); 
 }
 
+
+/*STYLE FOR INDEX.HTML*/
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -25,6 +27,11 @@ ol, ul {
     margin-bottom: 10px;
     text-decoration: none;
     list-style-type: none;
+}
+
+a {
+    color: #2d2d2d;
+    text-decoration: none;
 }
 
 .content {
@@ -630,4 +637,61 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
 }
 
+/*STYLE FOR MENU.HTML*/
 
+.menu-burger { 
+    border: -2px solid transparent;
+    background-color: #444242;
+    color: #fff;
+    padding: 0px;
+    border-image-source: url(../images/menu.png);
+    border-image-repeat: round;
+    border-image-slice: 30;
+    border-image-width: 10px;
+    font-size: 54px;
+    text-align: center;
+    width: 135px;
+    margin-left: 161px;
+    margin-top: 21px;
+    height: 56px;
+}
+
+.food-item {
+    max-height: 230px;
+    max-width: 298px;
+    margin-bottom: 140px;
+}
+
+.food-item img {
+    max-height: 230px;
+    max-width: 298px;
+}
+
+.text-align-menu-item {
+    text-align: center;
+}
+
+.tombol-menu {
+    color: #fff;
+    text-align: center;
+    font-family: 'BlockBeCnPro';
+    font-size: 20px;
+    transform: translateY(-50%);
+    height: 45px; 
+}
+
+.btn-1 {
+    background:#8b542f;
+}
+
+.btn-2 {
+    background:#ed7800; 
+}
+
+.btn-3 {
+    background:#f6a800; 
+}
+
+.btn-4 {
+    background:#e1261c; 
+}
